--- a/lcars/stylus/lcars_container.styl
+++ b/lcars/stylus/lcars_container.styl
@@ -35,7 +35,7 @@
     width 'calc(100% - %s)' % (double-spacing * 2)
     z-index 1
 
-  #container
+  #inner-container
     margin-top base-spacing
     margin-left base-spacing
     padding-left elbow-column-spacing + base-width
